# kedro-data-lineage

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
data-lineage/: README.md  pyproject.toml
data-lineage/conf/base/: catalog.yml  logging.yml  parameters.yml
data-lineage/conf/base/parameters/: customers.yml  products.yml  sales.yml  sales_customer_flow.yml  sales_measures.yml
data-lineage/docs/source/: conf.py  index.rst
data-lineage/src/: requirements.txt  setup.py
data-lineage/src/data_lineage/: __init__.py  __main__.py  pipeline_registry.py  settings.py
data-lineage/src/data_lineage/pipelines/customers/: README.md  __init__.py  nodes.py  pipeline.py
data-lineage/src/data_lineage/pipelines/inventory/: README.md  __init__.py  nodes.py  pipeline.py
data-lineage/src/data_lineage/pipelines/sales/: README.md  __init__.py  nodes.py  pipeline.py
data-lineage/src/data_lineage/pipelines/sales_flows/: README.md  __init__.py  nodes.py  pipeline.py
data-lineage/src/data_lineage/pipelines/sales_measures/: README.md  __init__.py  nodes.py  pipeline.py
data-lineage/src/data_lineage/pipelines/sales_pipeline/: sales_node.py  sales_pipeline.py
data-lineage/src/tests/: test_run.py
data-lineage/src/tests/pipelines/customers/: test_pipeline.py
data-lineage/src/tests/pipelines/products/: test_pipeline.py
data-lineage/src/tests/pipelines/sales/: test_pipeline.py
data-lineage/src/tests/pipelines/sales_customer_flow/: test_pipeline.py
docs/: index.md
search/: search_index.json
(+1 files in other folders)
