[tool.poetry]
name = "kedro-data-lineage"
version = "0.1.0"
description = ""
authors = ["ipiljek <isabel.piljek@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kedro_data_lineage"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
kedro-viz = "^6.2.0"


[tool.poetry.group.dev.dependencies]
kedro = "^0.18.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
