[tool.poetry]
name = "kedro-data-lineage"
version = "0.1.0"
description = ""
authors = ["ipiljek <isabel.piljek@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kedro_data_lineage"}]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
kedro-viz = "^6.2.0"
pandas = "^2.0.2"
kedro = "^0.18.9"
pyarrow = "^12.0.0"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
kedro = "^0.18.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
